remove errors and warnings

--- a/interfata/Makefile
+++ b/interfata/Makefile
@@ -14,17 +14,21 @@ tipag: tipag.c forms/tipagf.c
 
 demo05: demo05.c
 	$(CC) $(CCFLG) demo05.c $(XFFLAGS) $(INCLD) $(LDIR)
+
 yesno:
 	$(CC) $(CCFLG) yesno.c $(XFFLAGS) $(INCLD) $(LDIR)
+
 ayesno:
 	$(CC) $(CCFLG) ayesno.c $(XFFLAGS) $(INCLD) $(LDIR)
+
 yesno1:
 	$(CC) $(CCFLG) yesno1.c $(XFFLAGS) $(INCLD) $(LDIR)
+
 iclient:
 	$(CC) $(CCFLG) iclient.c $(XFFLAGS) $(INCLD) $(LDIR)
-hostanduser: lhostanduser.c
-	$(CC) $(CCFLG) iclient.c lhostanduser.c $(XFFLAGS) $(INCLD) $(LDIR)
+
+hostanduser: forms/lhostanduser.c
+	$(CC) $(CCFLG) iclient.c forms/lhostanduser.c $(XFFLAGS) $(INCLD) $(LDIR)
 
 clean:
 	rm -f demo05 yesno ayesno yesno1 iclient hostanduser
-	cld
